# testpybind

./: .gitignore  CMakeLists.txt  Embed.md  README.md  pyproject.toml
demo/: CMakeLists.txt
demo/src/: Test.cpp
myadd/: CMakeLists.txt
myadd/include/myadd/: fadd.h
myadd/src/: fadd.cpp
script/: build_wheels.bat  build_wheels.sh
src/: CMakeLists.txt
src/testpybind/: array_ops.cpp  main.cpp
test/: callee.py  test_api.py
